--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,8 +39,8 @@ services:
       - certbot-var:/var/lib/letsencrypt
       - web-root:/var/www/html
     ports:
-      - "80:80"
-      - "443:443"
+      - "${APP_PORT:-80}:80"
+      # - "443:443" # Disable HTTPS inside container if using Host Nginx for SSL
     depends_on:
       - web
 
