--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
-    command: gunicorn league_system.wsgi:application --bind 0.0.0.0:8000
+    command: gunicorn league_system.wsgi:application --bind 0.0.0.0:8000 --timeout 300
     volumes:
       - .:/app
       - static_volume:/app/static
